# dbt-colibri

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md
.github/: FUNDING.yml  on-release-main.yml  test.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature_request.md
.github/workflows/: check_version.yml  generate_demo.yml  on-prerelease-main.yml  on-release-main.yml  publish.yml  test.yml
context/: manifest-structure-v12.json
docs/: MCP_SETUP.md  github_pages_example.yml  model_selection_syntax.md
example_colibri_mcp/: lineage_index.py
examples/: main_step_1_direct.py  main_step_2_recursive.py  readme.md
scripts/: generate_demo.py  performance_plot.py  performance_test.py  preview_ui.py
src/dbt_colibri/cli/: cli.py
src/dbt_colibri/lineage_extractor/: extractor.py  lineage.py
src/dbt_colibri/mcp/: __init__.py  config.py  lineage_index.py  main.py  remote.py  server.py
src/dbt_colibri/report/: generator.py  index.html
src/dbt_colibri/utils/: log.py  parsing_utils.py  version_check.py
tests/: conftest.py  dbt_test_factory.py  test_case_sensitivity.py  test_cli.py  test_ephemeral_finance_core.py  test_extractor.py  test_generator.py  test_integration.py  test_selectors.py  test_structural_lineage.py  test_utils.py  test_version_check.py
tests/test_data/1.10/: catalog.json  manifest.json
tests/test_data/1.9/: catalog.json  manifest.json
tests/test_data/bigquery/: catalog.json  manifest.json
tests/test_data/clickhouse/: catalog.json  manifest.json
tests/test_data/databricks/: catalog.json  manifest.json
tests/test_data/duckdb/: catalog.json  manifest.json
tests/test_data/ephemeral_finance_core/: catalog.json  colibri_output.json  manifest.json
tests/test_data/oracle/: catalog.json  manifest.json
tests/test_data/postgres/: catalog.json  manifest.json
tests/test_data/redshift/: catalog.json  manifest.json
tests/test_data/sqlserver/: catalog.json  manifest.json
tests/test_data/trino/: catalog.json  manifest.json
