[project]
name = "dbt-colibri"
version = "0.2.7b4"
description = "A column lineage parser and dashboarding tool"
authors = [
    { name="bned" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "sqlglot[rs]>=26.33.0",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
colibri = "dbt_colibri.cli.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.2.0",
]
mcp-s3 = [
    "fastmcp>=0.2.0",
    "boto3>=1.34.0",
]
mcp-gcp = [
    "fastmcp>=0.2.0",
    "google-cloud-storage>=2.10.0",
]
mcp-all = [
    "fastmcp>=0.2.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff",
    "mypy",
    "build",
    "twine",
    "pre-commit",
]

performance-test = [
    "matplotlib>=3.9.4",
    "psutil>=7.1.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
